--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       background-color:hsl(0, 0%, 100%) ;
       padding: 24px;
       border-radius: 10px;
+      box-shadow: 10px 10px 2px rgba(0,0,0,0.9);
+      border: 1px solid hsl(0, 0%, 7%);
     }
     .text_block{
       padding-top: 24px;
